// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipeline-config should return the correct config for feature-dev 1`] = `
{
  "client": {
    "bucketName": "serverless-pro-client-dev-bucket-190423078218",
  },
  "env": {
    "account": "190423078218",
    "region": "us-east-1",
  },
  "shared": {
    "appConfigLambdaLayerArn": "arn:aws:lambda:eu-west-1:434848589818:layer:AWS-AppConfig-Extension-Arm64:46",
    "domainName": "stonktrader.io",
    "powerToolServiceName": "serverless-pro-orders-service-dev",
    "powerToolsMetricsNamespace": "ServerlessProDev",
  },
  "stageName": "dev",
  "stateful": {
    "assetsBucketName": "serverless-pro-lg-dev-bucket-190423078218",
    "bucketName": "serverless-pro-dev-bucket-190423078218",
  },
  "stateless": {
    "canaryNotificationEmail": "djheru@gmail.com",
    "lambdaMemorySize": 128,
    "randomErrorsEnabled": "false",
  },
}
`;

exports[`pipeline-config should return the correct config for prod 1`] = `
{
  "client": {
    "bucketName": "serverless-pro-client-prod-bucket-276541279630",
  },
  "env": {
    "account": "276541279630",
    "region": "us-east-1",
  },
  "shared": {
    "appConfigLambdaLayerArn": "arn:aws:lambda:eu-west-1:434848589818:layer:AWS-AppConfig-Extension-Arm64:46",
    "domainName": "stonktrader.io",
    "powerToolServiceName": "serverless-pro-orders-service-prod",
    "powerToolsMetricsNamespace": "ServerlessProProd",
  },
  "stageName": "prod",
  "stateful": {
    "assetsBucketName": "serverless-pro-lg-prod-bucket-276541279630",
    "bucketName": "serverless-pro-prod-bucket-276541279630",
  },
  "stateless": {
    "canaryNotificationEmail": "djheru@gmail.com",
    "lambdaMemorySize": 1024,
    "randomErrorsEnabled": "false",
  },
}
`;

exports[`pipeline-config should return the correct config for staging 1`] = `
{
  "client": {
    "bucketName": "serverless-pro-client-staging-bucket-228708224037",
  },
  "env": {
    "account": "228708224037",
    "region": "us-east-1",
  },
  "shared": {
    "appConfigLambdaLayerArn": "arn:aws:lambda:eu-west-1:434848589818:layer:AWS-AppConfig-Extension-Arm64:46",
    "domainName": "stonktrader.io",
    "powerToolServiceName": "serverless-pro-orders-service-staging",
    "powerToolsMetricsNamespace": "ServerlessProStaging",
  },
  "stageName": "staging",
  "stateful": {
    "assetsBucketName": "serverless-pro-lg-staging-bucket-228708224037",
    "bucketName": "serverless-pro-staging-bucket-228708224037",
  },
  "stateless": {
    "canaryNotificationEmail": "djheru@gmail.com",
    "lambdaMemorySize": 512,
    "randomErrorsEnabled": "false",
  },
}
`;
